Deploy: อัปเดตระบบล็อกอิน

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- เพิ่ม meta tags สำหรับทำให้แอปเหมือน native app บน iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
     <title>FoodSRU</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
 npx cap add android
